Java/Compiler_Assignments/assignment7/src/parser/parser.java
/* Generated By:JavaCC: Do not edit this line. parser.java */
package parser;

import syntax.*;
import java.util.ArrayList;

public class parser implements parserConstants {

  static final public Program Goal() throws ParseException {
  MainClass main;
  ArrayList <ClassDecl> classes = new ArrayList <ClassDecl>();
  ClassDecl currentClass;
    main = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      currentClass = ClassDeclaration();
     classes.add(currentClass);
    }
    jj_consume_token(0);
   {if (true) return new Program(main, classes);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
  Token t1; Token t2;
  Statement statement;
  Identifier i1; Identifier i2;
    t1 = jj_consume_token(CLASS);
    t2 = jj_consume_token(IDENTIFIER);
   i1 = new Identifier(t2.beginLine, t2.beginColumn, t2.toString());
    jj_consume_token(L_BRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(L_PAREN);
    jj_consume_token(STRING);
    jj_consume_token(L_BRACKET);
    jj_consume_token(R_BRACKET);
    t2 = jj_consume_token(IDENTIFIER);
   i2 = new Identifier(t2.beginLine, t2.beginColumn, t2.toString());
    jj_consume_token(R_PAREN);
    jj_consume_token(L_BRACE);
    statement = Statement();
    jj_consume_token(R_BRACE);
    jj_consume_token(R_BRACE);
   {if (true) return new MainClass(t1.beginLine, t1.beginColumn, i1, i2, statement);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclaration() throws ParseException {
  ClassDecl currentClass;
    if (jj_2_1(3)) {
      currentClass = SimpleClass();
     {if (true) return currentClass;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        currentClass = ExtendsClass();
     {if (true) return currentClass;}
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public SimpleClassDecl SimpleClass() throws ParseException {
  Token t;
  Identifier i;
  ArrayList <VarDecl> vars = new ArrayList<VarDecl>();
  ArrayList <MethodDecl> methods = new ArrayList<MethodDecl>();
    jj_consume_token(CLASS);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(L_BRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      VarDeclaration(vars);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      MethodDeclaration(methods);
    }
    jj_consume_token(R_BRACE);
   i = new Identifier(t.beginLine, t.beginColumn, t.toString()); {if (true) return new SimpleClassDecl(i, vars, methods);}
    throw new Error("Missing return statement in function");
  }

  static final public ExtendingClassDecl ExtendsClass() throws ParseException {
  Token t;
  Identifier i1; Identifier i2;
  ArrayList <VarDecl> vars = new ArrayList<VarDecl>();
  ArrayList <MethodDecl> methods = new ArrayList<MethodDecl>();
    jj_consume_token(CLASS);
    t = jj_consume_token(IDENTIFIER);
   i1 = new Identifier(t.beginLine, t.beginColumn, t.toString());
    jj_consume_token(EXTENDS);
    t = jj_consume_token(IDENTIFIER);
   i2 = new Identifier(t.beginLine, t.beginColumn, t.toString());
    jj_consume_token(L_BRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      VarDeclaration(vars);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      MethodDeclaration(methods);
    }
    jj_consume_token(R_BRACE);
   {if (true) return new ExtendingClassDecl(i1, i2, vars, methods);}
    throw new Error("Missing return statement in function");
  }

  static final public void VarDeclaration(ArrayList<VarDecl> vars) throws ParseException {
  Type type;
  Token t;
  Identifier i;
    type = Type();
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(SEMICOLON);
   i = new Identifier(t.beginLine, t.beginColumn, t.toString()); vars.add(new VarDecl(type, i));
  }

  static final public void MethodDeclaration(ArrayList<MethodDecl> methods) throws ParseException {
  Type type;
  Token t;
  Identifier i;
  ArrayList <Formal> formals = new ArrayList <Formal>();
  ArrayList <VarDecl> vars = new ArrayList <VarDecl>();
  ArrayList <Statement> statements = new ArrayList <Statement>();
  Statement currentStatement;
  Expression e;
    jj_consume_token(PUBLIC);
    type = Type();
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(L_PAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:
      FormalParameterList(formals);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(R_PAREN);
    jj_consume_token(L_BRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      VarDeclaration(vars);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case L_BRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_7;
      }
      currentStatement = Statement();
     statements.add(currentStatement);
    }
    jj_consume_token(RETURN);
    e = Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(R_BRACE);
    i = new Identifier(t.beginLine, t.beginColumn, t.toString());
    methods.add(new MethodDecl(type, i, formals, vars, statements, e));
  }

  static final public void FormalParameterList(ArrayList<Formal> formals) throws ParseException {
  Formal f;
    f = FormalParameter();
   formals.add(f);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      f = FormalParameterRest();
     formals.add(f);
    }
  }

  static final public Formal FormalParameter() throws ParseException {
  Type type;
  Token t;
  Identifier i;
    type = Type();
    t = jj_consume_token(IDENTIFIER);
    i = new Identifier(t.beginLine, t.beginColumn, t.toString());
    {if (true) return new Formal(type, i);}
    throw new Error("Missing return statement in function");
  }

  static final public Formal FormalParameterRest() throws ParseException {
  Formal f;
    jj_consume_token(COMMA);
    f = FormalParameter();
   {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
  Type t;
    if (jj_2_3(2)) {
      t = ArrayType();
     {if (true) return t;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        t = BooleanType();
     {if (true) return t;}
        break;
      case INT:
        t = IntType();
     {if (true) return t;}
        break;
      case IDENTIFIER:
        t = IdentifierType();
     {if (true) return t;}
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IntArrayType ArrayType() throws ParseException {
    jj_consume_token(INT);
    jj_consume_token(L_BRACKET);
    jj_consume_token(R_BRACKET);
   {if (true) return Type.THE_INT_ARRAY_TYPE;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanType BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
   {if (true) return Type.THE_BOOLEAN_TYPE;}
    throw new Error("Missing return statement in function");
  }

  static final public IntegerType IntType() throws ParseException {
    jj_consume_token(INT);
   {if (true) return Type.THE_INTEGER_TYPE;}
    throw new Error("Missing return statement in function");
  }

  static final public IdentifierType IdentifierType() throws ParseException {
  Token t;
    t = jj_consume_token(IDENTIFIER);
   {if (true) return new IdentifierType(t.beginLine, t.beginColumn, t.toString());}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
  Statement statement;
  ArrayList<Statement> statements = new ArrayList<Statement>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case L_BRACE:
      BlockStatements(statements);
     {if (true) return statements.get(0);}
      break;
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_4(2)) {
        statement = AssignmentStatement();
     {if (true) return statement;}
      } else if (jj_2_5(2)) {
        statement = ArrayAssignment();
     {if (true) return statement;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          statement = IfStatement();
     {if (true) return statement;}
          break;
        case WHILE:
          statement = WhileStatement();
     {if (true) return statement;}
          break;
        case PRINT:
          statement = PrintStatement();
     {if (true) return statement;}
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void BlockStatements(ArrayList<Statement> statements) throws ParseException {
  Statement statement;
    jj_consume_token(L_BRACE);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case L_BRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      statement = Statement();
     statements.add(statement);
    }
    jj_consume_token(R_BRACE);
  }

  static final public If IfStatement() throws ParseException {
  Token t;
  Expression e;
  Statement s1 ; Statement s2;
    jj_consume_token(IF);
    jj_consume_token(L_PAREN);
    e = Expression();
    jj_consume_token(R_PAREN);
    s1 = Statement();
    jj_consume_token(ELSE);
    s2 = Statement();
   {if (true) return new If(e, s1, s2);}
    throw new Error("Missing return statement in function");
  }

  static final public While WhileStatement() throws ParseException {
  Token t;
  Expression e;
  Statement s;
    t = jj_consume_token(WHILE);
    jj_consume_token(L_PAREN);
    e = Expression();
    jj_consume_token(R_PAREN);
    s = Statement();
   {if (true) return new While(t.beginLine, t.beginColumn, e, s);}
    throw new Error("Missing return statement in function");
  }

  static final public Print PrintStatement() throws ParseException {
  Token t;
  Expression e;
    t = jj_consume_token(PRINT);
    jj_consume_token(L_PAREN);
    e = Expression();
    jj_consume_token(R_PAREN);
    jj_consume_token(SEMICOLON);
   {if (true) return new Print(t.beginLine, t.beginColumn, e);}
    throw new Error("Missing return statement in function");
  }

  static final public Assign AssignmentStatement() throws ParseException {
  Token t;
  Identifier i;
  Expression e;
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    e = Expression();
    jj_consume_token(SEMICOLON);
    i = new Identifier(t.beginLine, t.beginColumn, t.toString());
    {if (true) return new Assign(t.beginLine, t.beginColumn, i, e);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayAssign ArrayAssignment() throws ParseException {
  Token t;
  Identifier i;
  Expression e1; Expression e2;
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(L_BRACKET);
    e1 = Expression();
    jj_consume_token(R_BRACKET);
    jj_consume_token(EQUALS);
    e2 = Expression();
    jj_consume_token(SEMICOLON);
    i = new Identifier(t.beginLine, t.beginColumn, t.toString());
    {if (true) return new ArrayAssign(t.beginLine, t.beginColumn, i, e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expression() throws ParseException {
  Expression e;
    if (jj_2_6(2147483647)) {
      e = And();
     {if (true) return e;}
    } else if (jj_2_7(2147483647)) {
      e = LessThan();
     {if (true) return e;}
    } else if (jj_2_8(2147483647)) {
      e = Plus();
     {if (true) return e;}
    } else if (jj_2_9(2147483647)) {
      e = Minus();
     {if (true) return e;}
    } else if (jj_2_10(2147483647)) {
      e = Multiplication();
     {if (true) return e;}
    } else if (jj_2_11(2147483647)) {
      e = ArrayLookup();
     {if (true) return e;}
    } else if (jj_2_12(2147483647)) {
      e = ArrayLength();
     {if (true) return e;}
    } else if (jj_2_13(2147483647)) {
      e = MethodCall();
     {if (true) return e;}
    } else if (jj_2_14(2147483647)) {
      e = ParenExpression();
     {if (true) return e;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case L_PAREN:
      case NOT:
      case NEW:
      case TRUE:
      case THIS:
      case FALSE:
      case IDENTIFIER:
      case INTEGER_LIT:
        e = PrimaryExpression();
     {if (true) return e;}
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public And And() throws ParseException {
  Expression e1; Expression e2;
    e1 = PrimaryExpression();
    jj_consume_token(AND);
    e2 = PrimaryExpression();
   {if (true) return new And(e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public LessThan LessThan() throws ParseException {
  Expression e1; Expression e2;
    e1 = PrimaryExpression();
    jj_consume_token(LT);
    e2 = PrimaryExpression();
   {if (true) return new LessThan(e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Plus Plus() throws ParseException {
  Expression e1; Expression e2;
    e1 = PrimaryExpression();
    jj_consume_token(PLUS);
    e2 = PrimaryExpression();
   {if (true) return new Plus(e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Minus Minus() throws ParseException {
  Expression e1; Expression e2;
    e1 = PrimaryExpression();
    jj_consume_token(MINUS);
    e2 = PrimaryExpression();
   {if (true) return new Minus(e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Times Multiplication() throws ParseException {
  Expression e1; Expression e2;
    e1 = PrimaryExpression();
    jj_consume_token(MULTIPLY);
    e2 = PrimaryExpression();
   {if (true) return new Times(e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayLookup ArrayLookup() throws ParseException {
  Expression e1; Expression e2;
    e1 = PrimaryExpression();
    jj_consume_token(L_BRACKET);
    e2 = PrimaryExpression();
    jj_consume_token(R_BRACKET);
   {if (true) return new ArrayLookup(e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayLength ArrayLength() throws ParseException {
  Expression e;
    e = PrimaryExpression();
    jj_consume_token(PERIOD);
    jj_consume_token(LENGTH);
   {if (true) return new ArrayLength(e);}
    throw new Error("Missing return statement in function");
  }

  static final public Call MethodCall() throws ParseException {
  Expression e;
  Token t;
  Identifier i;
  ArrayList <Expression> expList = new ArrayList <Expression>();
    e = PrimaryExpression();
    jj_consume_token(PERIOD);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(L_PAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case L_PAREN:
    case NOT:
    case NEW:
    case TRUE:
    case THIS:
    case FALSE:
    case IDENTIFIER:
    case INTEGER_LIT:
      expList = ExpressionList();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(R_PAREN);
    i = new Identifier(t.beginLine, t.beginColumn, t.toString());
    {if (true) return new Call (t.beginLine, t.beginColumn, e, i, expList);}
    throw new Error("Missing return statement in function");
  }

  static final public Expression ParenExpression() throws ParseException {
  Expression e;
    jj_consume_token(L_PAREN);
    e = Expression();
    jj_consume_token(R_PAREN);
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Expression PrimaryExpression() throws ParseException {
  Expression e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LIT:
      e = IntegerLiteral();
     {if (true) return e;}
      break;
    case TRUE:
      e = True();
     {if (true) return e;}
      break;
    case FALSE:
      e = False();
     {if (true) return e;}
      break;
    case IDENTIFIER:
      e = IdentifierExpression();
     {if (true) return e;}
      break;
    case THIS:
      e = This();
     {if (true) return e;}
      break;
    default:
      jj_la1[15] = jj_gen;
      if (jj_2_15(2)) {
        e = NewArray();
     {if (true) return e;}
      } else if (jj_2_16(2)) {
        e = NewObject();
     {if (true) return e;}
      } else {
